--- a/start.css
+++ b/start.css
@@ -9,14 +9,13 @@ body{
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	background-color: #15213E;
 	overflow: hidden;
 }
 
 div{
 	background-color:white;
-	justify-content:centre;
-	align-item:centre;
+	justify-content:center;
+	align-item:center;
 	display:flex;
 	width:100vw;
 	height:100vh;
@@ -24,10 +23,10 @@ div{
 
 h1{
 	color:red;
-	font-size:15px;
+	font-size:2em;
 }
 
 p{
 	color:black;
-	font-size:10px;
+	font-size:1em;
 }
