--- a/css.css
+++ b/css.css
@@ -27,8 +27,8 @@ body{
 
 .circle{
     position: absolute;
-    width: 3000px;
-    height: 3000px;
+    width: 100vw;
+    height: 100vh;
     border-radius: 50%;
     background-color: transparent;
     transition: background-color 0.5s ease-in-out;
